--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neutral Nexus</title>
+    <title>Mikyal - مكيال</title>
     <style>
         body {
   font-family: Arial, sans-serif; font-size: 16px;
@@ -70,7 +70,7 @@ button {
     
     <div class="chat-container">
         <div class="chat-header">
-          <h2>NeutralNexus</h2>
+          <h2>Mikyal</h2>
         </div>
         <div class="chat-box" id="chat-box">
           <div class="message received">Hello! whats the news?</div>
